// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiToast Props color danger is rendered 1`] = `
<div
  class="euiToast css-jv9buf-euiToast-danger"
>
  <p
    class="css-hus3oj-euiScreenReaderOnly"
  >
    A new notification appears
  </p>
  <div
    aria-label="Notification"
    class="css-1nrl7ue-euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <span
      class="css-1slhb2e-euiToastHeader__title"
      data-test-subj="euiToastHeader__title"
    >
      test title
    </span>
  </div>
</div>
`;

exports[`EuiToast Props color primary is rendered 1`] = `
<div
  class="euiToast css-1ut2n9c-euiToast-primary"
>
  <p
    class="css-hus3oj-euiScreenReaderOnly"
  >
    A new notification appears
  </p>
  <div
    aria-label="Notification"
    class="css-1nrl7ue-euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <span
      class="css-1slhb2e-euiToastHeader__title"
      data-test-subj="euiToastHeader__title"
    >
      test title
    </span>
  </div>
</div>
`;

exports[`EuiToast Props color success is rendered 1`] = `
<div
  class="euiToast css-1q9u8nm-euiToast-success"
>
  <p
    class="css-hus3oj-euiScreenReaderOnly"
  >
    A new notification appears
  </p>
  <div
    aria-label="Notification"
    class="css-1nrl7ue-euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <span
      class="css-1slhb2e-euiToastHeader__title"
      data-test-subj="euiToastHeader__title"
    >
      test title
    </span>
  </div>
</div>
`;

exports[`EuiToast Props color warning is rendered 1`] = `
<div
  class="euiToast css-150knfu-euiToast-warning"
>
  <p
    class="css-hus3oj-euiScreenReaderOnly"
  >
    A new notification appears
  </p>
  <div
    aria-label="Notification"
    class="css-1nrl7ue-euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <span
      class="css-1slhb2e-euiToastHeader__title"
      data-test-subj="euiToastHeader__title"
    >
      test title
    </span>
  </div>
</div>
`;

exports[`EuiToast Props iconType is rendered 1`] = `
<div
  class="euiToast css-19l91pv-euiToast"
>
  <p
    class="css-hus3oj-euiScreenReaderOnly"
  >
    A new notification appears
  </p>
  <div
    aria-label="Notification"
    class="css-1nrl7ue-euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <span
      aria-hidden="true"
      class="css-mmgke1-euiToastHeader__icon"
      data-euiicon-type="user"
    />
    <span
      class="css-1slhb2e-euiToastHeader__title"
      data-test-subj="euiToastHeader__title"
    >
      test title
    </span>
  </div>
</div>
`;

exports[`EuiToast Props title is rendered 1`] = `
<div
  class="euiToast css-19l91pv-euiToast"
>
  <p
    class="css-hus3oj-euiScreenReaderOnly"
  >
    A new notification appears
  </p>
  <div
    aria-label="Notification"
    class="css-1nrl7ue-euiToastHeader"
    data-test-subj="euiToastHeader"
  >
    <span
      class="css-1slhb2e-euiToastHeader__title"
      data-test-subj="euiToastHeader__title"
    >
      toast title
    </span>
  </div>
</div>
`;

exports[`EuiToast is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiToast testClass1 testClass2 css-19l91pv-euiToast"
  data-test-subj="test subject string"
>
  <p
    class="css-hus3oj-euiScreenReaderOnly"
  >
    A new notification appears
  </p>
  <div
    aria-label="Notification"
    class="css-pc95kc-euiToastHeader-withBody"
    data-test-subj="euiToastHeader"
  >
    <span
      class="css-1slhb2e-euiToastHeader__title"
      data-test-subj="euiToastHeader__title"
    >
      test title
    </span>
  </div>
  <div
    class="euiText css-s3yl1j-euiText-s-euiToastBody"
    data-test-subj="euiToastBody"
  >
    <p>
      Hi
    </p>
  </div>
</div>
`;
